# icpe26-perfaid-ae

./: .flake8  .gitmodules  LICENSE  README.md  pyproject.toml  requirements.txt  style.sh
examples/: fig01_leveldb.py  fig02_spec.py  fig03_heater.py  fig04_leveldb_placement.py  fig04_spec_placement.py  fig06_leveldb_locks.py  fig08_sched_hooks.py  fig09_leveldb_schedulers.py  fig11_leveldb_perfstat.py  fig13_leveldb_flamegraph.py
experiments/: fig05_heater.py  fig05_placement_leveldb.py  fig05_placement_spec.py  fig07_locks.py  fig10_schedulers.py  fig12_leveldb_perfstat.py  fig14_leveldb_flamegraph.py
experiments/fig15_overhead/: fig15_leveldb_overhead.py  plot_overhead.py  shell_docker.sh  shell_host.sh
generatedlocks/: CMakeLists.txt
generatedlocks/include/: dnuma_hmcslock.h
lib/: __init__.py  flame.py  locks.py  panels.py  platforms.py  schedulers.py
lib/lockgen/: __init__.py  hmcs.py  template.c  template_context.c  template_context_malloc.c  template_context_pkey.c  template_context_trylock.c  template_fastslow_diogo.c  template_hmcs.h  tiltgen.py
locks/: CMakeLists.txt
locks/include/: numa_cnalock.h
